<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/searchBackgroundColor">


    <EditText
        android:id="@+id/invisibleFocusTrap2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/dummy"
        android:inputType="text">

        <requestFocus />
    </EditText>

        <EditText
            android:id="@+id/search_place_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/hae_paikkoja"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/search_place_button"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/hae" />

</LinearLayout>